@@ -126,6 +126,7 @@ stopwords = getPlanSummary
 stopwords = getRunSummary
 stopwords = judgements
 stopwords = bailoutCallback
+stopwords = findResults
 
 [PkgVersion]
 [AutoPrereqs]
